k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ticketing-dev
  labels:
    app.kubernetes.io/name: ticketing-system
    app.kubernetes.io/environment: dev
