k8s/dev/mongo-ticket-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.dev.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: mongo-ticket
  name: mongo-ticket
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo-ticket
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.dev.yml
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        io.kompose.service: mongo-ticket
    spec:
      containers:
        - image: mongo:7
          name: mongo-ticket-dev
          ports:
            - containerPort: 27017
              protocol: TCP
          volumeMounts:
            - mountPath: /data/db
              name: mongo-ticket-dev
      restartPolicy: Always
      volumes:
        - name: mongo-ticket-dev
          persistentVolumeClaim:
            claimName: mongo-ticket-dev
