k8s/dev/auth-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.dev.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: auth-service
  name: auth-service
spec:
  ports:
    - name: "5001"
      port: 5001
      targetPort: 5001
  selector:
    io.kompose.service: auth-service
