k8s/dev/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    io.kompose.service: frontend
spec:
  type: NodePort   # 👈 أهم سطر
  selector:
    io.kompose.service: frontend
  ports:
    - name: "3000"
      port: 3000        # داخل الكلاستر
      targetPort: 80    # داخل الكونتينر
      nodePort: 30080   # 👈 ده اللي هتفتحه من برا
