k8s/dev/mongo-ticket-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.dev.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: mongo-ticket
  name: mongo-ticket
spec:
  ports:
    - name: "27018"
      port: 27018
      targetPort: 27017
  selector:
    io.kompose.service: mongo-ticket
