k8s/dev/notification-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.dev.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: notification-service
  name: notification-service
spec:
  ports:
    - name: "5004"
      port: 5004
      targetPort: 5004
  selector:
    io.kompose.service: notification-service
