k8s/dev/reporting-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.dev.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: reporting-service
  name: reporting-service
spec:
  ports:
    - name: "5005"
      port: 5005
      targetPort: 5005
  selector:
    io.kompose.service: reporting-service
