k8s/dev/support-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.dev.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: support-service
  name: support-service
spec:
  ports:
    - name: "5003"
      port: 5003
      targetPort: 5003
  selector:
    io.kompose.service: support-service
