k8s/dev/ticket-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.dev.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: ticket-service
  name: ticket-service
spec:
  ports:
    - name: "5002"
      port: 5002
      targetPort: 5002
  selector:
    io.kompose.service: ticket-service
